--- a/tidyswirl/tibble/lesson.yaml
+++ b/tidyswirl/tibble/lesson.yaml
@@ -6,14 +6,14 @@
   Version: 2.4.3
 
 - Class: text
-  Output: A data frame is a convenient way of storing data that can be expressed as observations (rows) and variables (columns). This lesson is about creating data frames using the tidyverse package {tibble}. This has benefits over the base R approach.
+  Output: A data frame is a convenient way of storing data that can be expressed as observations (rows) and variables (columns). This lesson is about creating and handling data frames using the tidyverse package {tibble}.
 
 # Install package and load it
 
 - Class: cmd_question
   Output: First you need to install the {tibble} package to your computer with install.packages("tibble"). If you've already installed it you can skip this step by typing skip().
   CorrectAnswer: if (!require("tibble")) install.packages("tibble")
-  AnswerTests: any_of_exprs('install.packages("tibble")', 'install.packages(pkgs = "tibble")', "install.packages(pkgs = 'tibble')", 'if (!require("tibble")) install.packages("tibble")')
+  AnswerTests: any_of_exprs('install.packages("tibble")', 'install.packages(pkgs = "tibble")', 'if (!require("tibble")) install.packages("tibble")')
   Hint: Remember to type quotation marks around "tibble" when you pass it to the function.
   
 - Class: cmd_question
@@ -25,50 +25,63 @@
 # as_tibble/output benefits
 
 - Class: text
-  Output: Why create a tibble-class data frame with {tibble} object rather than a data.frame object with base R? Much of the benefit is in the print methods. Let's look at an example using the built-in 'airquality' dataset.
+  Output: The {tibble} package simplifies data frames in R. Let's take a look at an example. The 'airquality' dataset is built into R and is of class 'data.frame'. Let's compare the output from 'airquality' when it has the class data.frame and the class tibble.
 
 - Class: cmd_question
-  Output: Type 'airquality' to print the dataframe and take a look at the output.
+  Output: Run 'airquality' to see an example of the typical output from a data.frame object.
   CorrectAnswer: airquality
-  AnswerTests: omnitest(correctExpr='airquality')
+  AnswerTests: any_of_exprs('print(airquality)', 'airquality')
   Hint: Type 'airquality' (without quote marks) at the prompt.
 
 - Class: text
-  Output: So it prints out all 153 rows, which is a bit excessive. We could use a function like View() is we wanted to see the full dataset. What can we do to make this output more user-friendly? The function as_tibble() from the {tibble} package can help us here. It converts several object types (like 'data.frame' and 'matrix') to tibbles. What does a tibble output look like?
-
+  Output: Calling the airquality data.frame object resulted in R printing all 153 of its rows, which flooded the console.
+  
+- Class: text
+  Output: What can we do to make this output more user-friendly? We can change its class to make it a tibble object using the as_tibble() from the {tibble} package. What does a tibble output look like?
+  
 - Class: cmd_question
-  Output: Use as_tibble() to convert the airquality data.frame to a tibble.
+  Output: Use as_tibble() to convert the airquality data frame from the data.frame class to the tibble class.
   CorrectAnswer: as_tibble(airquality)
   AnswerTests: any_of_exprs('as_tibble(airquality)', 'as_tibble(x = airquality)')
   Hint: Type as_tibble() with 'airquality' (without quotation marks) between the brackets.
 
+- Class: mult_question
+  Output: Compare the data.frame output to the tibble output. Which of the following is true?
+  AnswerChoices: Tibbles print fewer rows; Tibbles use colour to provide meaning; Tibbles give the data type of each column; All of these are true
+  CorrectAnswer: All of the above
+  AnswerTests: omnitest(correctVal='All of the above')
+  Hint: Take a look at the tibble that was printed after you executed as_tibble(airquality)
+
 - Class: text
-  Output: When printed, tibbles limit the output to 10 rows and report the number of rows omitted. Tibble outputs also report the dimensions (153 rows by 6 columns) and column types (like <int> for integers). Colour is also used to differentiate data from metadata and missing values (NA) are highlighted red as a warning (as are negative values).
+  Output: When printed, tibbles limit the output to 10 rows and report the number of rows omitted. Tibble outputs also report the dimensions (153 rows by 6 columns) and column types (like <int> for integers). Colour is also used to differentiate data from metadata, while missing values (NA) are highlighted in red as a warning (as are negative values).
 
 # tibble()
 
 - Class: text
-  Output: We can create tibbles from scratch as well as convert objects to tibbles. There are two functions for this, which are tibble() and tribble().
+  Output: You can create tibbles from scratch; you don't just have to convert to them from objects with the data.frame class. There are two functions for this, which are tibble() and tribble().
 
-- Class: Let's create a very simple tibble object using the tibble() function. Within the function you provide column names and assign vectors to them using c(). The first vector element will be in the first row, and so on. For example, tibble(col1 = c(1:2), col2 = c("a", "b")) creates a two-column, two-row data frame where the first row has a 1 in the column 'col1' and "a" in the column 'col2'.
-  Output: We can create tibbles from scratch.
+- Class: text
+  Output: Let's create a very simple tibble object using the tibble() function. Within the function you provide column names and assign vectors to them using c(). The first vector element will be in the first row, and so on. For example, tibble(col1 = c(1:2), col2 = c("a", "b")) creates a two-column, two-row data frame where the first row has a 1 in the column 'col1' and "a" in the column 'col2'.
 
 - Class: cmd_question
-  Output: Create a tibble() with two columns ("animal" and "legs") and four rows (one each for "cat", "snake", "bird" and the number of legs they have).
+  Output: Create a tibble() with two columns ("animal" and "legs") and three rows (one each for "cat", "snake", "bird" and the typical number of legs they have).
   CorrectAnswer: tibble(animal = c("cat", "snake", "bird"), leg_count = c(4, 0, 2))
   AnswerTests: omnitest(correctExpr='tibble(animal = c("cat", "snake", "bird"), legs = c(4, 0, 2))')
   Hint: Write your answer in the form tibble(col1 = c(1:2), col2 = c("a", "b"))
 
+- Class: text
+  Output: So tibble() lets us build a data frame column by column. First you specified the 'animals' column, then the 'legs' column.
+
 # tribble()
 
 - Class: text
-  Output: You supply data column-by-column to tibble(). You can use tribble() to construct a tibble object row-by-row instead (the 'r' in 'tribble' stands for 'rows'). This makes it easy to copy-paste the contents of some external table into tribble() and make it R-ready with only small changes (tildes, commas and quotation marks).
+  Output: You can also construct a tibble object row-by-row by using the tribble() function (the 'r' in 'tribble' stands for 'rows', probably). This makes it easy to copy-paste the contents of some external table into R and make it into a data frame with only small changes.
 
 - Class: text
-  Output: The line tribble(~col1, ~col2, 1, "a", 2, "b") produces the same two-row two-column example we saw in the tibble() example earlier. See how we're supplying each row at a time? The first two are the headers, denoted with a '~' (tilde), followed by the first row of data (1 and "a") and so on.
+  Output: The line tribble(~col1, ~col2, 1, "a", 2, "b") produces the same two-row two-column example we saw in the tibble() example earlier. See how we're supplying each row at a time? The first two are the headers, denoted with a '~' (tilde), followed by the first row of data (1 and "a") and so on. You could break each of these row specifications onto a new line in your script file to make it easier to read.
 
 - Class: cmd_question
-  Output: Recreate your tibble from earlier using tribble(). The headers should be 'animal' and 'legs' with rows for 'cat', 'snake' and 'spider'.
+  Output: Use the tribble() function to recreate your earlier tibble. The column headers should be 'animal' and 'legs' with rows for 'cat', 'snake' and 'spider'.
   CorrectAnswer: tribble(~animal, ~legs, "cat", 4, "snake", 0, "bird", 2)
   AnswerTests: omnitest(correctExpr='tribble(~animal, ~legs, "cat", 4, "snake", 0, "bird", 2)')
   Hint: Remember to prefix the column headers with a '~' (tilde). The headers don't have to be surrounded with quote marks.
@@ -76,13 +89,33 @@
 - Class: text
   Output: So we got the same outputs from both the tibble() and tribble().
 
+# enframe()
+
+- Class: text
+  Output: The tidyverse emphasises the use of tidy data frames, where each row represents a single observation. As such, many tidyverse tools operate on 'two-dimensional' (tabular) data rather than 'one-dimensional' (vector) data. How can we 'frame' our vector to a tibble so it's ready for data manipulation with the tidyverse?
+
+- Class: cmd_question
+  Output: I've added a named character vector called 'legs_vec' to your environment. Now print it.
+  CorrectAnswer: legs_vec
+  AnswerTests: any_of_exprs('print(legs_vec)', 'legs_vec')
+  Hint: Simply type the object's name to print it.
+  
+- Class: cmd_question
+  Output: Use the enframe() function on this object and observe the output. 
+  CorrectAnswer: enframe(legs_vec)
+  AnswerTests: omnitest(correctExpr='legs_vec')
+  Hint: Type enframe() with the object's name between the brackets.
+  
+- Class: text
+  Output: You started with a character vector, a 'data sequence' of values, and ended up with a data frame. Now it's ready for manipulation with other tidyverse packages like {dplyr}. Note that you can 'undo' this process by using deframe() to go from the data frame to the vector.
+
 # add_row() and add_column()
 
 - Class: text
-  Output: We can add new data to our tibble with add_row() and add_column(). We'll practice using a tibble called 'df' that I've added to your workspace (it's the same data as you created in the tibble() and tribble() examples).
+  Output: Once we've created a tibble, we can add new data with add_row() and add_column(). We'll practice using a tibble called 'df' that I've added to your workspace (it's the same data as you created in the tibble() and tribble() examples).
 
 - Class: text
-  Output: You can use add_row() by supplying the name of the dataframe and then the value you'd like to add to each column along the new row.
+  Output: You can use add_row() by supplying the name of the dataframe and then the value you'd like to add to each column along the new row, in the form add_row(dataframe_name, col1 = "a", col2 = 1)
 
 - Class: cmd_question
   Output: Add a row to the df tibble for 'spider' and its number of legs.
@@ -91,12 +124,15 @@
   Hint: In the add_row() function you need to supply the tibble name (df) and values for the 'animal' and 'legs' columns.
 
 - Class: text
-  Output: You declare new columns in add_column() as you did for tibble(), using the form 'new_col = c("a", "b", "c")' inside the function, for example. This time you need to provide the name of the data object as the first argument.
+  Output: See how 
+
+- Class: text
+  Output: You declare new columns in add_column() as you did for tibble(), using the form 'new_col = c("a", "b", "c")' inside the function.
 
 - Class: cmd_question
   Output: Add a column to the df tibble called 'wings' and use c() to supply a vector of the number of wings each animal has.
   CorrectAnswer: add_column(df, wings = c(0, 0, 2))
   AnswerTests: omnitest(correctExpr='add_column(df, wings = c(0, 0, 2))')
-  Hint: In the add_column() function you need to supply the tibble name (df) and values for the new 'wings' column.
+  Hint: In the add_column() function you need to supply the tibble name (df) first and then values for the new 'wings' column with c().
 
 # closing test
